--- a/Week6/frontend-assesment/src/App.css
+++ b/Week6/frontend-assesment/src/App.css
@@ -65,3 +65,8 @@ input {
   margin: 0 3%;
   font-family: 'Raleway';
 }
+textarea:focus,
+input:focus {
+  outline: none;
+  border-bottom: 1px solid black;
+}
