--- a/Week9/Vanilla Javascript Project/style.css
+++ b/Week9/Vanilla Javascript Project/style.css
@@ -38,3 +38,35 @@ form button:hover {
   background: #d88771;
   color: white;
 }
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+}
+.todo {
+  margin: 0.5rem;
+  background: white;
+  color: black;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.todo li {
+  flex: 1;
+}
+.trash-btn,
+.complete-btn {
+  background: #ff6f47;
+  color: white;
+  border: none;
+  padding: 0.5rem;
+  font-size: 1.5rem;
+
+  cursor: pointer;
+}
