--- a/Week10/NotesApp Javascript/style.css
+++ b/Week10/NotesApp Javascript/style.css
@@ -31,7 +31,8 @@ body {
   margin-left: 0.5rem;
 }
 .main .notes {
-  weight: 100%;
+  display: none;
+  width: 100%;
   height: 100%;
 }
 .notes textarea {
