--- a/Week10/NotesApp Javascript/style.css
+++ b/Week10/NotesApp Javascript/style.css
@@ -1,44 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
 * {
-  padding: none;
-  border: none;
   box-sizing: border-box;
 }
+
 body {
   background-color: #7bdaf3;
-  font-family: 'Poppins', sans-serif;
   display: flex;
   flex-wrap: wrap;
+  font-family: 'Poppins', sans-serif;
   margin: 0;
+  padding-top: 3rem;
 }
-.notes {
-  width: 500px;
-  height: 500px;
+
+.add {
+  background-color: #9ec862;
+  border-radius: 3px;
+  border: none;
+  color: white;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+}
+
+.note {
   background-color: #fff;
+  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
   margin: 20px;
+  height: 400px;
+  width: 400px;
 }
-.notes .tools {
+
+.note .tools {
   background-color: #9ec862;
   display: flex;
   justify-content: flex-end;
   padding: 0.5rem;
 }
-.notes .tools button {
-  background: transparent;
+
+.note .tools button {
+  background-color: transparent;
   border: none;
   color: #fff;
+  cursor: pointer;
   font-size: 1rem;
   margin-left: 0.5rem;
 }
-.main .notes {
-  display: none;
+
+.note .main {
+  background-color: #eee;
+  overflow: hidden;
+  height: 400px;
   width: 100%;
-  height: 100%;
 }
-.notes textarea {
-  width: 100%;
-  height: 100%;
-  border: none;
-  font-family: inherit;
+
+.note textarea {
   outline: none;
+  font-family: inherit;
+  font-size: 1.2rem;
+  border: none;
+  height: 400px;
+  width: 100%;
+}
+
+.note .hidden {
+  display: none;
 }
